fix: Fix cluster mode to pass the tests